# discordbot

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  config.ini  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: formatter.yml  linter.yml
licenses/: template_license
migrations/: _0.py  _1.py  _2.py  _3.py  __init__.py
src/: main.py  shared_state.py
src/cogs/: about.py  activity_tracking.py  config.py  error_handler.py  exampleCommandModule.py  exampleEventModule.py  example_command_module.py  example_event_module.py  help.py  logging.py  raids.py  welcome.py
src/utils/: __init__.py  errors.py  parsers.py
