[tool.poetry]
name = "PCParadisebot"
version = "1.0.0"
description = "A small discord bot for pcparadise"
# all the people who've developed on this project can be found
# on the github repo, only the original author is written below.
authors = ["Arvinder Dhanoa <awsomearvinder@gmail.com>"]
maintainers = [ "Ganoosh <swajabbadaja@gmail.com>" ]
license = "MIT"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
"discord.py" = "^1.7.3"
appdirs = "^1.4.4"
python = "^3.10"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
aiosqlite = "^0.17.0"
pytimeparse = "^1.1.8"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pylint = "^2.14.5"
mypy = "~0.942"
'discord.py-stubs' = "^1.7"
fuzzywuzzy-stubs = "0.0.1"

[tool.poetry.scripts]
run = "src.main:main"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
